# DeepAgents-Playground

./: .gitignore  ARCHITECTURE.md  GUIDE.md  README.md  README_STREAMING.md  github_agent.ipynb  langgraph.json  main.py  pyproject.toml  test_embed_simple.py  test_ollama_chroma.py
chroma_db/: chroma.sqlite3
chroma_tools/: __init__.py  tools.py
data/chunks/: deepagents_mainpy_chunk_1.md  deepagents_mainpy_chunk_2.md  deepagents_mainpy_chunk_3.md  fase1_mainpy_ejemplo.py  main_fase1.py  mainpy-guide_chunk_1.md  mainpy-guide_chunk_2.md  mainpy-guide_chunk_3.md  mainpy_compositebackend_fase1.txt  mainpy_fase1_nota_usuario_1.py  mainpy_fase1_nota_usuario_1_index_chunk.py  nota2_chroma_tools_imports.txt  nota2_subagent_wiring_snippet.txt  python_knowledge.txt  subagents_data.txt  subagents_structure.txt  subagents_types_and_notes.txt  subagents_types_and_notes_v2.txt
data/deepagents/: init_tools.txt  initpy_tools.md  mainpy-guide.txt  mainpy.md.md
src/agentbankz/orchestrators/: __init__.py  defaults.yml  orchestrator_factory.py  orchestrators.yml
src/agentbankz/subagents/: __init__.py  gmail.py  loader.py  mcp_builder.py  obsidian.py  subagents.yml
src/agentbankz/tools/: zapier.py
temp/: chunk.txt
