[project]
name = "deep-agents-notebook"
version = "0.1.0"
description = "Add a short description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "copilotkit>=0.1.89",
    "deepagents>=0.6.1",
    "deepagents-backends",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph-api>=0.8.7",
    "langgraph-cli>=0.4.26",
]

[tool.uv.sources]
deepagents-backends = { git = "https://github.com/DiTo97/deepagents-backends.git" }
